--- a/3.html
+++ b/3.html
@@ -680,7 +680,12 @@
 </head>
 <body>
 
-<div class="nav-header" style="padding: 20px;">
+<div style="display: flex; justify-content: center; gap: 16px; padding: 20px 20px 0;">
+  <a href="https://stitch.withgoogle.com/" target="_blank" style="text-decoration: none; padding: 8px 16px; border-radius: 8px; background: linear-gradient(135deg, #4285f4, #34a853); color: #fff; font-size: 0.82rem; font-weight: 600; display: inline-flex; align-items: center; gap: 6px;">🎨 Google Stitch</a>
+  <a href="https://aistudio.google.com/apps" target="_blank" style="text-decoration: none; padding: 8px 16px; border-radius: 8px; background: linear-gradient(135deg, #ea4335, #fbbc04); color: #fff; font-size: 0.82rem; font-weight: 600; display: inline-flex; align-items: center; gap: 6px;">⚙️ AI Studio</a>
+</div>
+
+<div class="nav-header" style="padding: 16px 20px;">
   <a href="index.html" class="nav-btn">規格說明</a>
   <a href="2.html" class="nav-btn">教學指南 1</a>
   <a href="3.html" class="nav-btn active">教學指南 2</a>
