--- a/index.html
+++ b/index.html
@@ -416,6 +416,11 @@
 <body>
 <div class="container">
 
+  <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 16px;">
+    <a href="https://stitch.withgoogle.com/" target="_blank" style="text-decoration: none; padding: 8px 16px; border-radius: 8px; background: linear-gradient(135deg, #4285f4, #34a853); color: #fff; font-size: 0.82rem; font-weight: 600; display: inline-flex; align-items: center; gap: 6px;">🎨 Google Stitch</a>
+    <a href="https://aistudio.google.com/apps" target="_blank" style="text-decoration: none; padding: 8px 16px; border-radius: 8px; background: linear-gradient(135deg, #ea4335, #fbbc04); color: #fff; font-size: 0.82rem; font-weight: 600; display: inline-flex; align-items: center; gap: 6px;">⚙️ AI Studio</a>
+  </div>
+
   <div class="nav-header">
     <a href="index.html" class="nav-btn active">規格說明</a>
     <a href="2.html" class="nav-btn">教學指南 1</a>
